# webasm-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lang_specs.md
include/: driver.h  errors.h  table.h  tokens.h
parsing/: parser.output  parser.tab.c  parser.y  scanner.l
src/: driver.cpp  parser.cpp  scanner.cpp  table.cpp
tests/: scanner_test.ro
